from 2.4.8 to 2.4.9
- fixed bug: during differential backup dar saved unchanged hard linked inode
  when a hard link on that inode was out of the -R root directory

from 2.4.7 to 2.4.8
- documentation fixes and updates
- improved database listing efficiency
- reduced memory usage of the caching layer in libdar
- fixed self reported bug caused by memory allocation failure
- fixed a SIGSEGV caused by double free in dar_xform when syntax error is
  met on command-line
- dar_xform was not able to properly transform archive generated by dar older
  than release 2.4.0
- fixed bug that lead dar be unable to remove a directory at restoration time
- replaced old remaining "bcopy" occurrence by a call to memcpy
- fixed compilation warning under ArchLinux
- fixed crash met while creating a backup with on-fly isolation
- fixed libdar behavior when reading a strongly corrupted encrypted archive

from 2.4.6 to 2.4.7
- fixing memory allocation bug in crc class, that lead glibc aborting dar
- reviewed code and replaced some remaining occurences of bzero/bcopy by
  their recommended replacement version
- fixed compilation problem under Solaris
- fixed bug that could lead a file to be wrongly reported as different from the
  one on filesystem, when that file has been changed while it was saved, then
  saved a second time but has its size modified since the first time it was
  saved.

from 2.4.5 to 2.4.6
- fixed bug met while interrupting compressed archive creation, the resulting
  archive was only readable in --sequential-read mode
- fixed bug met while reading an interrupted archive in sequential reading
  mode. It lead dar to not release some objects from memory at the end of
  the operation, which displayed an ugly error message from libdar selfcheck
  routine.
- fixed message reporting unknown system group when converting gid to name
  (was reporting unknow "user" instead of unknown "group")
- removing the $Id:$ macro from file as we moved from CVS to GIT