@@ -1,6 +1,7 @@
 version 2.4.9
 --------------
-Thanks to "JBThiel" for bug report on dar-support mailing-list.
+Thanks to "JBThiel" for bug report on dar-support mailing-list. Thanks to
+Kevin Wormington for feedback and tests.
 
 version 2.4.8
 --------------
