@@ -1,6 +1,7 @@
 from 2.4.8 to 2.4.9
 - fixed bug: during differential backup dar saved unchanged hard linked inode
-  when a hard link on that inode was out of the -R root directory
+  when a hard link on that inode was out of the -R root directory.
+- Adapted patch provided by Kevin Wormington (new messages displayed)
 
 from 2.4.7 to 2.4.8
 - documentation fixes and updates
